CHANGELOG

This is a CHANGELOG for spdr.
Project’s GIT repo: https://github.com/sierdzio/spdar

2014-04:
 - documentation updates

2014-02:
 - the rewrite is completed
 - both Import and Synchronize operations are supported, most functionality is
   implemented
 - all classes are unit-tested
 - benchmarks are available
 - various intensive developer tests were performed
 - standalone library, command line tool and a GUI are all available
 - code is documented, and doxygen docs are available (even online! See
   http://www.sierdzio.com/spdr)
 - what is not yet ready: Spdr::Ask functionality, EXIF and DIFF comparisons
   (but even without them, the project works fine and picks up updated files
   correctly)

2014-01:
 - start a general rewrite of the codebase with use of PIMPL and friends
 - spdr is divided into a core library, a GUI, a CLI, and a set of tests
   and benchmarks
 - make Qt 5 a hard dependency (drop Qt 4 support)

2014-01-12:
 - fully rename the project to spdr
 - clean up
 - update various descriptions
 - migrate to doxygen documentation
 - change the license to WTFPL (yeah!). See http://www.wtfpl.net/about/

2012-05-06 12:44 CEST:
 - made project build in source by default (no shadow build or configuration
   needed to cleanly build sPDaR),
 - some rearrangements in the source code (no changes on the outside),
 - make local CHANGELOG and README, delete the online one.

2011-07-27 09:58 CEST - beta2.1:
Fixed:
 - version number displayed in application,
 - some small About box adjustments, including fixing licensing info.

2011-07-25 21:36:00 CEST - beta2:
Added:
 - QDoc documentation,
 - git repo at https://gitorious.org/spdar/
Changed:
 - license to GPLv3,
 - reorganised files inside project’s source.

2010-09-16 17:46:00 CEST -  beta1.1:
Fixes:
 - Fixed preferences not being set properly in some situations,
 - Fixed RAW extensions being compared in a wrong way in redistributor.

2010-09-12 11:11:00 CEST -  beta1:
New features: