@@ -66,31 +66,31 @@ library). Below is the list of command line flags it recognizes.
 Options:
   -h, --help            Displays this help.
   -v, --version         Displays version information.
-  -i, --import          Spdr will perform import operation: it will copy all
-                        files from input according to formatting tags specified
-                        in output directory path. See the documentation for more
-                        information
-  -s, --synchronize     (default) Spdr will perform file synchronization. See
-                        the documentation for more information
-  -l, --log <path>      Log file location. If empty/ not specified, Spdr will
-                        print to stdout
+  -i, --import          Spdr will perform import operation: it will copy all fi
+                        les from input according to formatting tags specified i
+                        n output directory path. See the documentation for more
+                         information
+  -s, --synchronize     (default) Spdr will perform file synchronization. See t
+                        he documentation for more information
+  -l, --log <path>      Log file location. If empty/ not specified, Spdr will p
+                        rint to stdout
   --log-level <number>  Specifies how many log messages will be shown. Accepted
-                        values are 0 (no logging) to 6 (log everything,
-                        including debug output). See the documentation for more
-                        information.
-  -m, --move            Files will be moved from input to output (input will
-                        change!). By default, Spdr copies the files (leavign
-                        input intact)
-  --simulate            Spdr will simulate all the actions, without actually
-                        doing any changes to the file system
+                         values are 0 (no logging) to 6 (log everything, includ
+                        ing debug output). See the documentation for more infor
+                        mation.
+  -m, --move            Files will be moved from input to output (input will ch
+                        ange!). By default, Spdr copies the files (leavign inpu
+                        t intact)
+  --simulate            Spdr will simulate all the actions, without actually do
+                        ing any changes to the file system
 
 Arguments:
   input                 Input folder, usually containing updated data
   output                Output folder, usually containing old data. When Import
-                        operation is performed, the path can contain
-                        QDateTime-style time and date tags enclosed in < and >,
-                        as well as star * wildcard matching. See the
-                        documentation for more information
+                         operation is performed, the path can contain QDateTime
+                        -style time and date tags enclosed in < and >, as well
+                        as star * wildcard matching. See the documentation for
+                        more information
 \endverbatim
 
 \section requirements System requirements
