@@ -7,7 +7,7 @@
   \class SpdrGuiBasicInputForm
   \ingroup wigetgui
 
-  Class used to display options that are common to both import and sychronize
+  \brief Class used to display options that are common to both import and sychronize
   functionalities.
  */
 
